@@ -1,5 +1,15 @@
 2002-11-25  David Hyatt  <hyatt@apple.com>
 
+	Fix for 3020493, another fun little margin collapsing quirk
+	that I missed. (<td><div><p>).  The <div> has to pick up the quirk
+	from the <p> so that the margins of the <p> still get collapsed
+	away.
+	
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::layoutBlockChildren):
+
+2002-11-25  David Hyatt  <hyatt@apple.com>
+
 	Don't add in the halfleading for align=texttop. That's incorrect.
 	
         * khtml/rendering/render_object.cpp:
